--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -23,7 +23,7 @@
      <a href="ContactUs.html">Contact us</a>
      <a class="active" href="#about">About us</a>
      <a href="ProjectIndex.html">Project</a>
-     <a href="../Index.html">Home</a>
+     <a href="../index.html">Home</a>
  </div>
     <section id="home">
         <p>Innovative ideas, Stylish design</p>
