--- a/html/ContactUs.html
+++ b/html/ContactUs.html
@@ -26,7 +26,7 @@
       <a class = "active" href="#contact">Contact us</a>
       <a href="AboutUs.html">About us</a>
       <a href="ProjectIndex.html">Projects</a>
-      <a href="../Index.html">Home</a>
+      <a href="../index.html">Home</a>
   </div>
 
   </div>
