--- a/html/ProjectIndex.html
+++ b/html/ProjectIndex.html
@@ -20,7 +20,7 @@
     <a href="ContactUs.html">Contact us</a>
     <a href="AboutUs.html">About us</a>
     <a class ="active" href="ProjectIndex.html">Projects</a>
-    <a href="../Index.html">Home</a>
+    <a href="../index.html">Home</a>
 </div>
     <section class="projects box">
         <h1 class="title"> RECENT PROJECTS</h1>
