--- a/html/PrimeDevelopment.html
+++ b/html/PrimeDevelopment.html
@@ -25,7 +25,7 @@
                  <a href="ContactUs.html">Contact us</a>
                  <a href="AboutUs.html">About us</a>
                  <a href="ProjectIndex.html">Projects</a>
-                 <a href="../Index.html">Home</a>
+                 <a href="../index.html">Home</a>
             </div>
         </div>
         <div>
