--- a/html/man2.html
+++ b/html/man2.html
@@ -96,7 +96,7 @@
      <a href="ContactUs.html">Contact us</a>
      <a href="AboutUs.html">About us</a>
      <a href="ProjectIndex.html">Projects</a>
-     <a href="../Index.html">Home</a>
+     <a href="../index.html">Home</a>
  </div>
 
 
